--- a/Projects.css
+++ b/Projects.css
@@ -9,13 +9,13 @@
 .u-section-1 .u-text-1 {
   margin: 60px auto;
 }.u-section-2 .u-sheet-1 {
-  min-height: 354px;
+  min-height: 557px;
 }
 
 .u-section-2 .u-text-1 {
   text-transform: uppercase;
   width: 680px;
-  margin: 78px auto 0;
+  margin: 60px auto 0;
 }
 
 .u-section-2 .u-text-2 {
@@ -26,7 +26,7 @@
 .u-section-2 .u-text-3 {
   line-height: 1.8;
   width: 680px;
-  margin: 20px auto 60px;
+  margin: 27px auto 60px;
 }
 
 @media (max-width: 991px) {
@@ -37,7 +37,7 @@
 
 @media (max-width: 767px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 354px;
+    min-height: 557px;
   }
 
   .u-section-2 .u-text-1 {
@@ -66,20 +66,21 @@
     width: 340px;
   }
 }.u-section-3 {
-  min-height: 318px;
+  background-image: none;
 }
 
 .u-section-3 .u-sheet-1 {
-  min-height: 655px;
+  min-height: 50vw;
 }
 
 .u-section-3 .u-layout-wrap-1 {
   pointer-events: auto;
-  margin: 0 auto 0 0;
+  margin-top: 35px;
+  margin-bottom: 35px;
 }
 
 .u-section-3 .u-layout-cell-1 {
-  min-height: 655px;
+  min-height: 650px;
   pointer-events: auto;
 }
 
@@ -88,15 +89,15 @@
 }
 
 .u-section-3 .u-text-1 {
-  margin: 172px 0 0;
+  margin: 181px 0 0;
 }
 
 .u-section-3 .u-text-2 {
-  margin: 20px 0 0;
+  margin: 56px 0 0;
 }
 
 .u-section-3 .u-image-1 {
-  min-height: 685px;
+  min-height: 650px;
   pointer-events: auto;
   background-image: url("images/Screenshot2021-01-18at16.01.41.png");
 }
@@ -106,22 +107,21 @@
 }
 
 @media (max-width: 1199px) {
+  .u-section-3 {
+    min-height: 318px;
+  }
+
   .u-section-3 .u-sheet-1 {
     min-height: 203px;
   }
 
-  .u-section-3 .u-layout-wrap-1 {
-    margin-right: initial;
-    margin-left: initial;
-  }
-
   .u-section-3 .u-layout-cell-1 {
-    min-height: 540px;
+    min-height: 536px;
   }
 
   .u-section-3 .u-image-1 {
     background-position: 50% 50%;
-    min-height: 565px;
+    min-height: 536px;
   }
 }
 
@@ -144,7 +144,7 @@
   }
 
   .u-section-3 .u-image-1 {
-    min-height: 433px;
+    min-height: 411px;
   }
 }
 
@@ -155,7 +155,7 @@
   }
 
   .u-section-3 .u-image-1 {
-    min-height: 779px;
+    min-height: 740px;
   }
 }
 
@@ -164,7 +164,7 @@
     min-height: 409px;
   }
 }.u-section-4 .u-sheet-1 {
-  min-height: 354px;
+  min-height: 1153px;
 }
 
 .u-section-4 .u-text-1 {
@@ -181,18 +181,23 @@
 .u-section-4 .u-text-3 {
   line-height: 1.8;
   width: 680px;
-  margin: 20px auto 60px;
+  margin: 20px auto 0;
 }
 
-@media (max-width: 991px) {
-  .u-section-4 .u-sheet-1 {
-    min-height: 260px;
-  }
+.u-section-4 .u-image-1 {
+  width: 680px;
+  height: 348px;
+  margin: 38px auto 0;
+}
+
+.u-section-4 .u-text-4 {
+  width: 680px;
+  margin: 30px auto 60px;
 }
 
 @media (max-width: 767px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 354px;
+    min-height: 1081px;
   }
 
   .u-section-4 .u-text-1 {
@@ -204,11 +209,24 @@
   }
 
   .u-section-4 .u-text-3 {
+    width: 540px;
+  }
+
+  .u-section-4 .u-image-1 {
+    width: 540px;
+    height: 276px;
+  }
+
+  .u-section-4 .u-text-4 {
     width: 540px;
   }
 }
 
 @media (max-width: 575px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 979px;
+  }
+
   .u-section-4 .u-text-1 {
     width: 340px;
   }
@@ -220,61 +238,640 @@
   .u-section-4 .u-text-3 {
     width: 340px;
   }
-}.u-section-5 .u-sheet-1 {
-  min-height: 354px;
+
+  .u-section-4 .u-image-1 {
+    width: 340px;
+    height: 174px;
+  }
+
+  .u-section-4 .u-text-4 {
+    width: 340px;
+  }
+}.u-section-5 {
+  background-image: none;
+}
+
+.u-section-5 .u-sheet-1 {
+  min-height: 1794px;
+}
+
+.u-section-5 .u-image-1 {
+  width: 570px;
+  height: 412px;
+  margin: -1136px auto 0 -2373px;
 }
 
 .u-section-5 .u-text-1 {
-  text-transform: uppercase;
-  width: 680px;
-  margin: 78px auto 0;
+  font-weight: 700;
+  margin: 786px 168px 0 169px;
 }
 
 .u-section-5 .u-text-2 {
+  font-size: 1.125rem;
+  margin: 28px 168px 0 169px;
+}
+
+.u-section-5 .u-image-2 {
+  width: 436px;
+  height: 331px;
+  margin: 28px auto 0 107px;
+}
+
+.u-section-5 .u-image-3 {
+  width: 441px;
+  height: 331px;
+  margin: -331px auto 0 592px;
+}
+
+.u-section-5 .u-image-4 {
+  width: 436px;
+  height: 299px;
+  margin: 20px auto 0 107px;
+}
+
+.u-section-5 .u-image-5 {
+  width: 441px;
+  height: 319px;
+  margin: -319px auto 0 592px;
+}
+
+.u-section-5 .u-image-6 {
+  width: 926px;
+  height: 641px;
+  margin: 28px auto 60px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-5 .u-image-1 {
+    margin-top: -2271px;
+  }
+
+  .u-section-5 .u-text-1 {
+    width: 803px;
+    margin-top: 1921px;
+    margin-right: 169px;
+  }
+
+  .u-section-5 .u-text-2 {
+    width: 803px;
+    margin-right: 169px;
+  }
+
+  .u-section-5 .u-image-2 {
+    margin-top: 49px;
+    margin-left: 269px;
+  }
+
+  .u-section-5 .u-image-3 {
+    margin-top: -1467px;
+    margin-right: 20px;
+    margin-left: 499px;
+  }
+
+  .u-section-5 .u-image-4 {
+    height: 298px;
+    margin-top: 1136px;
+    margin-left: 269px;
+  }
+
+  .u-section-5 .u-image-5 {
+    margin-top: -1434px;
+    margin-left: 499px;
+  }
+
+  .u-section-5 .u-image-6 {
+    width: 803px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 1652px;
+  }
+
+  .u-section-5 .u-text-1 {
+    width: 720px;
+    margin-left: 210px;
+    margin-right: 210px;
+  }
+
+  .u-section-5 .u-text-2 {
+    width: 720px;
+    margin-left: 210px;
+    margin-right: 210px;
+  }
+
+  .u-section-5 .u-image-2 {
+    margin-right: 344px;
+    margin-left: auto;
+  }
+
+  .u-section-5 .u-image-3 {
+    margin-right: 130px;
+    margin-left: 279px;
+  }
+
+  .u-section-5 .u-image-4 {
+    margin-right: 344px;
+    margin-left: auto;
+  }
+
+  .u-section-5 .u-image-5 {
+    margin-left: 279px;
+  }
+
+  .u-section-5 .u-image-6 {
+    width: 720px;
+    height: 499px;
+    margin-right: 60px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 1527px;
+  }
+
+  .u-section-5 .u-image-1 {
+    margin-top: -2179px;
+  }
+
+  .u-section-5 .u-text-1 {
+    width: 540px;
+    margin-top: 1829px;
+    margin-left: 300px;
+    margin-right: 300px;
+  }
+
+  .u-section-5 .u-text-2 {
+    width: 540px;
+    margin-left: 300px;
+    margin-right: 300px;
+  }
+
+  .u-section-5 .u-image-2 {
+    margin-top: 28px;
+    margin-right: auto;
+    margin-left: 300px;
+  }
+
+  .u-section-5 .u-image-3 {
+    margin-top: -1446px;
+    margin-right: 220px;
+    margin-left: 99px;
+  }
+
+  .u-section-5 .u-image-4 {
+    margin-top: 1115px;
+    margin-right: auto;
+    margin-left: 300px;
+  }
+
+  .u-section-5 .u-image-5 {
+    margin-top: -1413px;
+    margin-left: 99px;
+  }
+
+  .u-section-5 .u-image-6 {
+    width: 540px;
+    height: 374px;
+    margin-right: auto;
+    margin-left: 300px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 1100px;
+  }
+
+  .u-section-5 .u-image-1 {
+    margin-top: -2100px;
+  }
+
+  .u-section-5 .u-text-1 {
+    width: 340px;
+    margin-top: 1750px;
+    margin-left: 400px;
+    margin-right: 400px;
+  }
+
+  .u-section-5 .u-text-2 {
+    width: 340px;
+    margin-left: 400px;
+    margin-right: 400px;
+  }
+
+  .u-section-5 .u-image-2 {
+    width: 340px;
+    height: 258px;
+    margin-top: -45px;
+    margin-left: 400px;
+  }
+
+  .u-section-5 .u-image-3 {
+    width: 340px;
+    height: 255px;
+    margin-top: -1234px;
+    margin-right: auto;
+    margin-left: 400px;
+  }
+
+  .u-section-5 .u-image-4 {
+    width: 340px;
+    height: 232px;
+    margin-top: 982px;
+    margin-left: 400px;
+  }
+
+  .u-section-5 .u-image-5 {
+    width: 340px;
+    height: 246px;
+    margin-top: -1274px;
+    margin-left: 0;
+  }
+
+  .u-section-5 .u-image-6 {
+    width: 340px;
+    height: 235px;
+    margin-top: 101px;
+    margin-left: 400px;
+  }
+}.u-section-6 .u-sheet-1 {
+  min-height: 634px;
+}
+
+.u-section-6 .u-text-1 {
+  text-transform: uppercase;
+  width: 680px;
+  margin: 60px auto 0;
+}
+
+.u-section-6 .u-text-2 {
   width: 680px;
   margin: 19px auto 0;
 }
 
-.u-section-5 .u-text-3 {
+.u-section-6 .u-text-3 {
+  line-height: 1.8;
+  font-weight: 700;
+  width: 680px;
+  margin: 19px auto 60px;
+}
+
+@media (max-width: 991px) {
+  .u-section-6 .u-sheet-1 {
+    min-height: 260px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-6 .u-sheet-1 {
+    min-height: 634px;
+  }
+
+  .u-section-6 .u-text-1 {
+    width: 540px;
+  }
+
+  .u-section-6 .u-text-2 {
+    width: 540px;
+  }
+
+  .u-section-6 .u-text-3 {
+    width: 540px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-6 .u-text-1 {
+    width: 340px;
+  }
+
+  .u-section-6 .u-text-2 {
+    width: 340px;
+  }
+
+  .u-section-6 .u-text-3 {
+    width: 340px;
+  }
+}.u-section-7 {
+  background-image: none;
+}
+
+.u-section-7 .u-sheet-1 {
+  min-height: 331px;
+}
+
+.u-section-7 .u-text-1 {
+  font-weight: 700;
+  width: 803px;
+  margin: 60px auto 0;
+}
+
+.u-section-7 .u-text-2 {
+  width: 803px;
+  font-size: 1.125rem;
+  margin: 28px auto 60px;
+}
+
+@media (max-width: 991px) {
+  .u-section-7 .u-text-1 {
+    width: 720px;
+  }
+
+  .u-section-7 .u-text-2 {
+    width: 720px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-7 .u-text-1 {
+    width: 540px;
+  }
+
+  .u-section-7 .u-text-2 {
+    width: 540px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-7 .u-text-1 {
+    width: 340px;
+  }
+
+  .u-section-7 .u-text-2 {
+    width: 340px;
+  }
+}.u-section-8 .u-sheet-1 {
+  min-height: 354px;
+}
+
+.u-section-8 .u-text-1 {
+  width: 680px;
+  margin: 60px auto 0;
+}
+
+.u-section-8 .u-text-2 {
   line-height: 1.8;
   width: 680px;
   margin: 20px auto 60px;
 }
 
 @media (max-width: 991px) {
-  .u-section-5 .u-sheet-1 {
+  .u-section-8 .u-sheet-1 {
     min-height: 260px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-5 .u-sheet-1 {
+  .u-section-8 .u-sheet-1 {
     min-height: 354px;
   }
 
-  .u-section-5 .u-text-1 {
+  .u-section-8 .u-text-1 {
     width: 540px;
   }
 
-  .u-section-5 .u-text-2 {
-    width: 540px;
-  }
-
-  .u-section-5 .u-text-3 {
+  .u-section-8 .u-text-2 {
     width: 540px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-5 .u-text-1 {
+  .u-section-8 .u-text-1 {
     width: 340px;
   }
 
-  .u-section-5 .u-text-2 {
+  .u-section-8 .u-text-2 {
     width: 340px;
   }
+}.u-section-9 .u-sheet-1 {
+  min-height: 616px;
+}
 
-  .u-section-5 .u-text-3 {
-    width: 340px;
+.u-section-9 .u-layout-wrap-1 {
+  margin: 60px auto 0 0;
+}
+
+.u-section-9 .u-layout-cell-1 {
+  min-height: 180px;
+}
+
+.u-section-9 .u-container-layout-1 {
+  padding: 30px;
+}
+
+.u-section-9 .u-text-1 {
+  font-weight: 700;
+  font-size: 1.875rem;
+  margin: 0;
+}
+
+.u-section-9 .u-layout-cell-2 {
+  min-height: 180px;
+}
+
+.u-section-9 .u-container-layout-2 {
+  padding: 30px;
+}
+
+.u-section-9 .u-text-2 {
+  margin: 0;
+}
+
+.u-section-9 .u-gallery-1 {
+  height: 296px;
+  grid-template-columns: repeat(4, auto);
+  grid-gap: 20px;
+  margin: 20px auto 60px 0;
+}
+
+.u-section-9 .u-gallery-inner-1 {
+  grid-template-columns: repeat(4, auto);
+  grid-gap: 20px;
+}
+
+.u-section-9 .u-over-slide-1 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-9 .u-gallery-item-2 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-9 .u-over-slide-2 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-9 .u-gallery-item-3 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-9 .u-over-slide-3 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-9 .u-over-slide-4 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-9 .u-sheet-1 {
+    min-height: 532px;
+  }
+
+  .u-section-9 .u-layout-wrap-1 {
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-9 .u-layout-cell-1 {
+    min-height: 148px;
+  }
+
+  .u-section-9 .u-layout-cell-2 {
+    min-height: 148px;
+  }
+
+  .u-section-9 .u-gallery-1 {
+    height: 244px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-9 .u-sheet-1 {
+    min-height: 988px;
+  }
+
+  .u-section-9 .u-layout-cell-1 {
+    min-height: 100px;
+  }
+
+  .u-section-9 .u-layout-cell-2 {
+    min-height: 100px;
+  }
+
+  .u-section-9 .u-gallery-1 {
+    height: 748px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-9 .u-gallery-inner-1 {
+    grid-template-columns: repeat(2, auto);
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-9 .u-sheet-1 {
+    min-height: 2584px;
+  }
+
+  .u-section-9 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-9 .u-text-1 {
+    font-size: 3rem;
+  }
+
+  .u-section-9 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-9 .u-gallery-1 {
+    height: 2244px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-9 .u-gallery-inner-1 {
+    grid-template-columns: repeat(1, auto);
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-9 .u-sheet-1 {
+    min-height: 1753px;
+  }
+
+  .u-section-9 .u-gallery-1 {
+    height: 1413px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+}.u-section-10 .u-sheet-1 {
+  min-height: 797px;
+}
+
+.u-section-10 .u-image-1 {
+  object-position: 100% 16.4%;
+  filter: brightness(0.6);
+  height: 773px;
+  margin-top: 2px;
+  margin-bottom: 0;
+  margin-left: 0;
+}
+
+.u-section-10 .u-text-1 {
+  margin: -504px 527px 0 40px;
+}
+
+.u-section-10 .u-text-2 {
+  margin: 30px 263px 0 40px;
+}
+
+.u-section-10 .u-btn-1 {
+  border-style: solid;
+  font-weight: 700;
+  font-size: 0.9375rem;
+  margin: 43px auto 60px 43px;
+  padding: 6px 31px 6px 30px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-10 .u-image-1 {
+    margin-left: initial;
+  }
+
+  .u-section-10 .u-text-1 {
+    margin-right: 367px;
+    margin-left: 0;
+  }
+
+  .u-section-10 .u-text-2 {
+    margin-right: 103px;
+    margin-left: 0;
+  }
+
+  .u-section-10 .u-btn-1 {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-10 .u-text-1 {
+    margin-right: 147px;
+  }
+
+  .u-section-10 .u-text-2 {
+    margin-right: 0;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-10 .u-text-1 {
+    margin-right: 0;
   }
 }
