--- a/Projects.css
+++ b/Projects.css
@@ -160,8 +160,24 @@
 }
 
 @media (max-width: 575px) {
+  .u-section-3 {
+    min-height: 348px;
+  }
+
+  .u-section-3 .u-sheet-1 {
+    min-height: 923px;
+  }
+
+  .u-section-3 .u-layout-cell-1 {
+    min-height: 515px;
+  }
+
+  .u-section-3 .u-text-1 {
+    margin-top: 1px;
+  }
+
   .u-section-3 .u-image-1 {
-    min-height: 409px;
+    min-height: 338px;
   }
 }.u-section-4 .u-sheet-1 {
   min-height: 1153px;
@@ -298,49 +314,55 @@
 .u-section-5 .u-image-6 {
   width: 926px;
   height: 641px;
-  margin: 28px auto 60px;
+  margin: 28px auto 60px 107px;
 }
 
 @media (max-width: 1199px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 1793px;
+  }
+
   .u-section-5 .u-image-1 {
     margin-top: -2271px;
   }
 
   .u-section-5 .u-text-1 {
-    width: 803px;
-    margin-top: 1921px;
-    margin-right: 169px;
+    width: auto;
+    margin-top: 1942px;
+    margin-right: 111px;
+    margin-left: 26px;
   }
 
   .u-section-5 .u-text-2 {
-    width: 803px;
-    margin-right: 169px;
+    width: auto;
+    margin-left: 26px;
+    margin-right: 26px;
   }
 
   .u-section-5 .u-image-2 {
-    margin-top: 49px;
-    margin-left: 269px;
+    margin-top: 42px;
+    margin-left: 27px;
   }
 
   .u-section-5 .u-image-3 {
-    margin-top: -1467px;
-    margin-right: 20px;
-    margin-left: 499px;
+    margin-left: 472px;
   }
 
   .u-section-5 .u-image-4 {
     height: 298px;
-    margin-top: 1136px;
-    margin-left: 269px;
+    margin-top: 21px;
+    margin-left: 27px;
   }
 
   .u-section-5 .u-image-5 {
-    margin-top: -1434px;
-    margin-left: 499px;
+    margin-left: 472px;
   }
 
   .u-section-5 .u-image-6 {
-    width: 803px;
+    width: 889px;
+    height: 616px;
+    margin-top: 13px;
+    margin-left: 26px;
   }
 }
 
@@ -350,46 +372,44 @@
   }
 
   .u-section-5 .u-text-1 {
-    width: 720px;
     margin-left: 210px;
     margin-right: 210px;
   }
 
   .u-section-5 .u-text-2 {
-    width: 720px;
     margin-left: 210px;
     margin-right: 210px;
   }
 
   .u-section-5 .u-image-2 {
-    margin-right: 344px;
-    margin-left: auto;
+    margin-left: 140px;
   }
 
   .u-section-5 .u-image-3 {
-    margin-right: 130px;
-    margin-left: 279px;
+    margin-top: 20px;
+    margin-left: 140px;
   }
 
   .u-section-5 .u-image-4 {
-    margin-right: 344px;
-    margin-left: auto;
+    margin-left: 140px;
   }
 
   .u-section-5 .u-image-5 {
-    margin-left: 279px;
+    margin-top: 20px;
+    margin-left: 140px;
   }
 
   .u-section-5 .u-image-6 {
     width: 720px;
     height: 499px;
     margin-right: 60px;
+    margin-left: 0;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-5 .u-sheet-1 {
-    min-height: 1527px;
+    min-height: 2247px;
   }
 
   .u-section-5 .u-image-1 {
@@ -397,52 +417,50 @@
   }
 
   .u-section-5 .u-text-1 {
-    width: 540px;
-    margin-top: 1829px;
-    margin-left: 300px;
-    margin-right: 300px;
+    margin-top: 1832px;
+    margin-right: 25px;
+    margin-left: 52px;
   }
 
   .u-section-5 .u-text-2 {
-    width: 540px;
-    margin-left: 300px;
-    margin-right: 300px;
+    margin-top: 13px;
+    margin-right: 52px;
+    margin-left: 52px;
   }
 
   .u-section-5 .u-image-2 {
-    margin-top: 28px;
-    margin-right: auto;
-    margin-left: 300px;
+    margin-top: 686px;
+    margin-left: 50px;
   }
 
   .u-section-5 .u-image-3 {
-    margin-top: -1446px;
-    margin-right: 220px;
-    margin-left: 99px;
+    margin-top: -981px;
+    margin-left: 50px;
   }
 
   .u-section-5 .u-image-4 {
-    margin-top: 1115px;
-    margin-right: auto;
-    margin-left: 300px;
+    margin-top: 650px;
+    margin-left: 50px;
   }
 
   .u-section-5 .u-image-5 {
-    margin-top: -1413px;
-    margin-left: 99px;
+    margin-top: -948px;
+    margin-left: 50px;
   }
 
   .u-section-5 .u-image-6 {
-    width: 540px;
     height: 374px;
-    margin-right: auto;
-    margin-left: 300px;
+    margin-top: 665px;
+    margin-bottom: 36px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-5 .u-sheet-1 {
-    min-height: 1100px;
+    min-height: 2000px;
   }
 
   .u-section-5 .u-image-1 {
@@ -450,52 +468,56 @@
   }
 
   .u-section-5 .u-text-1 {
-    width: 340px;
-    margin-top: 1750px;
-    margin-left: 400px;
-    margin-right: 400px;
+    margin-top: 1656px;
+    margin-left: 20px;
+    margin-right: 20px;
   }
 
   .u-section-5 .u-text-2 {
-    width: 340px;
-    margin-left: 400px;
-    margin-right: 400px;
+    margin-top: -68px;
+    margin-left: 20px;
+    margin-right: 20px;
   }
 
   .u-section-5 .u-image-2 {
-    width: 340px;
     height: 258px;
-    margin-top: -45px;
-    margin-left: 400px;
+    margin-top: 45px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-5 .u-image-3 {
-    width: 340px;
     height: 255px;
-    margin-top: -1234px;
-    margin-right: auto;
-    margin-left: 400px;
+    margin-top: 374px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-5 .u-image-4 {
-    width: 340px;
     height: 232px;
-    margin-top: 982px;
-    margin-left: 400px;
+    margin-top: -626px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-5 .u-image-5 {
-    width: 340px;
     height: 246px;
-    margin-top: -1274px;
-    margin-left: 0;
+    margin-top: 394px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-5 .u-image-6 {
-    width: 340px;
     height: 235px;
-    margin-top: 101px;
-    margin-left: 400px;
+    margin-top: 83px;
+    margin-bottom: 45px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
   }
 }.u-section-6 .u-sheet-1 {
   min-height: 634px;
@@ -618,6 +640,20 @@
   margin: 20px auto 60px;
 }
 
+@media (max-width: 1199px) {
+  .u-section-8 .u-sheet-1 {
+    min-height: 255px;
+  }
+
+  .u-section-8 .u-text-1 {
+    margin-top: 99px;
+  }
+
+  .u-section-8 .u-text-2 {
+    margin-bottom: 0;
+  }
+}
+
 @media (max-width: 991px) {
   .u-section-8 .u-sheet-1 {
     min-height: 260px;
@@ -626,7 +662,7 @@
 
 @media (max-width: 767px) {
   .u-section-8 .u-sheet-1 {
-    min-height: 354px;
+    min-height: 255px;
   }
 
   .u-section-8 .u-text-1 {
@@ -825,53 +861,143 @@
 }
 
 .u-section-10 .u-text-1 {
-  margin: -504px 527px 0 40px;
+  font-size: 4.5rem;
+  margin: -504px 416px 0 152px;
 }
 
 .u-section-10 .u-text-2 {
-  margin: 30px 263px 0 40px;
+  font-size: 1.25rem;
+  margin: 30px 152px 0;
 }
 
 .u-section-10 .u-btn-1 {
   border-style: solid;
   font-weight: 700;
   font-size: 0.9375rem;
-  margin: 43px auto 60px 43px;
+  margin: 43px auto 60px 155px;
   padding: 6px 31px 6px 30px;
 }
 
 @media (max-width: 1199px) {
+  .u-section-10 .u-sheet-1 {
+    min-height: 638px;
+  }
+
   .u-section-10 .u-image-1 {
+    height: 637px;
+    margin-top: 0;
     margin-left: initial;
   }
 
   .u-section-10 .u-text-1 {
-    margin-right: 367px;
-    margin-left: 0;
+    width: auto;
+    margin-top: -371px;
+    margin-right: 329px;
+    margin-left: 38px;
   }
 
   .u-section-10 .u-text-2 {
-    margin-right: 103px;
-    margin-left: 0;
+    width: auto;
+    margin-right: 65px;
+    margin-left: 38px;
   }
 
   .u-section-10 .u-btn-1 {
-    margin-left: 0;
+    margin-bottom: 52px;
+    margin-left: 38px;
   }
 }
 
 @media (max-width: 991px) {
+  .u-section-10 .u-sheet-1 {
+    min-height: 618px;
+  }
+
+  .u-section-10 .u-image-1 {
+    height: 488px;
+    margin-top: 130px;
+    margin-left: initial;
+  }
+
   .u-section-10 .u-text-1 {
-    margin-right: 147px;
+    margin-top: -292px;
+    margin-right: 136px;
+    margin-left: 11px;
   }
 
   .u-section-10 .u-text-2 {
-    margin-right: 0;
+    font-size: 1rem;
+    margin-top: 13px;
+    margin-right: 26px;
+    margin-left: 11px;
+  }
+
+  .u-section-10 .u-btn-1 {
+    margin-top: 17px;
+    margin-left: auto;
+    margin-bottom: 43px;
   }
 }
 
 @media (max-width: 767px) {
+  .u-section-10 .u-sheet-1 {
+    min-height: 362px;
+  }
+
+  .u-section-10 .u-image-1 {
+    height: 361px;
+    margin-top: 1px;
+    margin-left: initial;
+  }
+
   .u-section-10 .u-text-1 {
-    margin-right: 0;
+    margin-top: -254px;
+    margin-right: -30px;
+    margin-left: 30px;
+    font-size: 3.75rem;
+  }
+
+  .u-section-10 .u-text-2 {
+    margin-top: 11px;
+    margin-right: 60px;
+    margin-left: 30px;
+  }
+
+  .u-section-10 .u-btn-1 {
+    margin-top: -297px;
+    margin-bottom: 284px;
+    margin-left: 30px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-10 .u-sheet-1 {
+    min-height: 238px;
+  }
+
+  .u-section-10 .u-image-1 {
+    height: 221px;
+    margin-top: 9px;
+    margin-left: initial;
+  }
+
+  .u-section-10 .u-text-1 {
+    font-size: 1.25rem;
+    margin-top: -212px;
+    margin-right: -24px;
+    margin-left: 24px;
+  }
+
+  .u-section-10 .u-text-2 {
+    font-size: 0.625rem;
+    margin-top: 8px;
+    margin-left: 24px;
+    margin-right: 24px;
+  }
+
+  .u-section-10 .u-btn-1 {
+    margin-top: 24px;
+    margin-left: auto;
+    margin-bottom: 31px;
   }
 }
